- Fixed experiment settings width issue on firefox

--- a/app/webapp/src/main/resources/uk/ac/ebi/fg/annotare2/web/gwt/editor/public/EditorApp.css
+++ b/app/webapp/src/main/resources/uk/ac/ebi/fg/annotare2/web/gwt/editor/public/EditorApp.css
@@ -652,3 +652,7 @@ a.wgt-button :hover {
 .arrayHelp{
     padding-left: 50px;
 }
+.detailTable{
+    width: 100%;
+    table-layout: fixed;
+}
